--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.0",
+    "knex": "^0.95.15",
     "express.js": "^1.0.0",
     "nodemon": "^2.0.15",
     "pg": "^8.7.3"
